tests/invalid/conditional_statements/mismatched_nesting.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    a: i64 = 0;
    if (1)
        return 1;
    else
        return 2;
    else
        return 3;
}